# qt_assignment

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/lib/: config.py  minio.py  processing.py  redis.py  sync_storage.py
app/tasks/: refresh_cik_data.py
test/: conftest.py  test_main.py  test_processing.py
worker/: celery.py
